# yace-rw

./: .gitignore  README.md  install_prerequisites.sh  pyproject.toml
gs/cmake/: SourcesAndHeaders.cmake
gs/include/coresets/: uniform_sampling.hpp
gs/include/utils/: random.hpp
gs/source/: main.cpp
gs/source/coresets/: group_sampling.cpp  uniform_sampling.cpp
gs/source/utils/: random.cpp
kmeans/: main.cc  master.h
notebooks/: 01-results.ipynb  02-weights.ipynb
xrun/: calc_costs.py  gen.py  go.py
xrun/data/: loader.py  run_info.py
