[tool.poetry]
name = "xrun"
version = "0.1.0"
description = "Experiment Runner"
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numba = "^0.55.1"
click = "^8.1.3"
tqdm = "^4.64.0"
psutil = "^5.9.0"
scipy = "^1.8.0"
scikit-learn = "^1.1.0"
pandas = "^1.4.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
ipywidgets = "^7.7.0"
jupyterlab = "^3.4.2"
seaborn = "^0.11.2"
openpyxl = "^3.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
